blue-green/blue-app-route.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: blue-green-app-route
  namespace: default
spec:
  traffic:
    - configurationName: helloworld-nodejs-blue
      percent: 100 # All traffic goes to this revision
