blue-green/distribute-traffic.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: blue-green-app-route
  namespace: default
spec:
  traffic:
    - configurationName: helloworld-nodejs-blue
      percent: 50 # All traffic goes to this revision
    - configurationName: helloworld-nodejs-green
      percent: 50
      name: v2
